# hospital-veterinario-hve

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  database.py  docker-compose.yml  forms.py  main.py  models.py  pyproject.toml  re.sh  requirements.txt
hospvet/: __init__.py  config.py  extensions.py  models.py
hospvet/campañas/vacunacion/: cupos.csv  forms.py  routes.py
hospvet/inicio/: routes.py
hospvet/static/css/: styles.css
hospvet/templates/: admin.html  confirmacion_publica.html  formulario_vacunacion_2026.html  index.html  mantenimiento.html  recuperar.html
static/css/: styles.css
templates/: admin.html  index.html  mantenimiento.html
